src/demo-httpbin/kustomize/fluxcd-istio-api/service-clusterip.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "demo-httpbin"
  namespace: "demo-httpbin"
spec:
  type: "ClusterIP"
  selector:
    app: "demo-httpbin"
  ports:
    - name: "http"
      port: 8000
      targetPort: 80
...
