src/demo-httpbin/kustomize/fluxcd-istio-api/virtual-service.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  name: "demo-httpbin"
  namespace: "demo-httpbin"
spec:
  hosts:
    - "*"
  gateways:
    - "istio-ingress/istio-ingress"
  http:
    - match:
        - uri:
            prefix: "/status"
        - uri:
            prefix: "/delay"
      route:
        - destination:
            host: "demo-httpbin.demo-httpbin.svc.cluster.local"
            port:
              number: 8000
...
